src/elements/snapshots/panoramix__elements__any_element__tests__boxed_button_press.snap
---
source: src/elements/any_element.rs
expression: harness.get_root_debug_state()

---
RootWidget(
    Column(
        IdentityWrapper(
            ControllerHost(
                Button(
                    "Hello",
                ),
            ),
        ),
    ),
)
