src/elements/snapshots/panoramix__elements__any_element__tests__boxed_label_widget-2.snap
---
source: src/elements/any_element.rs
expression: label_state_2

---
RootWidget(
    Column(
        Label(
            "World",
        ),
    ),
)
