src/elements/snapshots/panoramix__elements__any_element__tests__boxed_label_widget.snap
---
source: src/elements/any_element.rs
expression: label_state

---
RootWidget(
    Column(
        Label(
            "Hello",
        ),
    ),
)
