src/elements/snapshots/panoramix__elements__any_element__tests__new_element-2.snap
---
source: src/elements/any_element.rs
expression: label_data
---
LabelData {
    text: "Hello",
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
}
