src/elements/snapshots/panoramix__elements__any_element__tests__new_element.snap
---
source: src/elements/any_element.rs
expression: label

---
Label {
    text: "Hello",
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
}
